tests/ui/async-await/await-keyword/2015-edition-error-various-positions.stderr
error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-error-various-positions.rs:5:13
   |
LL |     pub mod await {
   |             ^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>
note: the lint level is defined here
  --> $DIR/2015-edition-error-various-positions.rs:2:9
   |
LL | #![deny(keyword_idents)]
   |         ^^^^^^^^^^^^^^
   = note: `#[deny(keyword_idents_2018)]` implied by `#[deny(keyword_idents)]`
help: you can use a raw identifier to stay compatible
   |
LL |     pub mod r#await {
   |             ~~~~~~~

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-error-various-positions.rs:7:20
   |
LL |         pub struct await;
   |                    ^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>
help: you can use a raw identifier to stay compatible
   |
LL |         pub struct r#await;
   |                    ~~~~~~~

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-error-various-positions.rs:11:16
   |
LL | use outer_mod::await::await;
   |                ^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>
help: you can use a raw identifier to stay compatible
   |
LL | use outer_mod::r#await::await;
   |                ~~~~~~~

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-error-various-positions.rs:11:23
   |
LL | use outer_mod::await::await;
   |                       ^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>
help: you can use a raw identifier to stay compatible
   |
LL | use outer_mod::await::r#await;
   |                       ~~~~~~~

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-error-various-positions.rs:16:14
   |
LL | struct Foo { await: () }
   |              ^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>
help: you can use a raw identifier to stay compatible
   |
LL | struct Foo { r#await: () }
   |              ~~~~~~~

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-error-various-positions.rs:20:15
   |
LL | impl Foo { fn await() {} }
   |               ^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>
help: you can use a raw identifier to stay compatible
   |
LL | impl Foo { fn r#await() {} }
   |               ~~~~~~~

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-error-various-positions.rs:24:14
   |
LL | macro_rules! await {
   |              ^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>
help: you can use a raw identifier to stay compatible
   |
LL | macro_rules! r#await {
   |              ~~~~~~~

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-error-various-positions.rs:31:5
   |
LL |     await!();
   |     ^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>
help: you can use a raw identifier to stay compatible
   |
LL |     r#await!();
   |     ~~~~~~~

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-error-various-positions.rs:34:11
   |
LL |     match await { await => {} }
   |           ^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>
help: you can use a raw identifier to stay compatible
   |
LL |     match r#await { await => {} }
   |           ~~~~~~~

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-error-various-positions.rs:34:19
   |
LL |     match await { await => {} }
   |                   ^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>
help: you can use a raw identifier to stay compatible
   |
LL |     match await { r#await => {} }
   |                   ~~~~~~~

error: aborting due to 10 previous errors

